feat(source): add 'noLink' and 'grayscale' option

--- a/src/component/web-icon.css
+++ b/src/component/web-icon.css
@@ -21,3 +21,9 @@
     height:20px; 
     border-radius: 5px;
 }
+.grayscale {
+    composes : image;
+    filter: gray;
+    filter: grayscale(1);
+    -webkit-filter: grayscale(1);
+}
